<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settingsLayout1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/settingsBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_arrow_left"
            android:contentDescription="@string/settingsBackButtonDescription"
            android:minWidth="70dp"
            android:minHeight="70dp"
            android:onClick="backButtonOnClick"
            app:backgroundTint="?android:textColorSecondary" />

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settingsTitle"
            android:textColor="?android:textColorPrimary"
            android:textSize="40sp"
            app:fontFamily="@font/fira_mono_bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/settingsSoundImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/settingsSoundDescription"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_volume_on"
                android:tint="?android:textColorSecondary" />

            <TextView
                android:id="@+id/settingsSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsSound"
                android:textColor="?android:textColorSecondary"
                android:textSize="35sp"
                app:fontFamily="@font/fira_mono_bold" />

            <Switch
                android:id="@+id/settingsSoundSwitch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="switchSoundOnClick"
                android:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"
                android:trackTint="?android:textColorPrimary"
                android:thumbTint="?android:textColorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/settingsThemeDescription"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_theme"
                android:tint="?android:textColorSecondary" />

            <TextView
                android:id="@+id/settingsTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsTheme"
                android:textColor="?android:textColorSecondary"
                android:textSize="35sp"
                app:fontFamily="@font/fira_mono_bold" />

            <Switch
                android:id="@+id/settingsThemeSwitch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="switchThemeOnClick"
                android:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"
                android:trackTint="?android:textColorPrimary"
                android:thumbTint="?android:textColorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="shareButtonOnClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/settingsShareDescription"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_share"
                android:tint="?android:textColorSecondary" />

            <TextView
                android:id="@+id/settingsShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsShare"
                android:textColor="?android:textColorSecondary"
                android:textSize="35sp"
                app:fontFamily="@font/fira_mono_bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>