<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuLayout1"
        android:layout_width="409dp"
        android:layout_height="277dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="266dp"
            android:layout_height="138dp"
            android:text="@string/gameName"
            android:textColor="?android:textColorPrimary"
            android:textSize="49sp"
            app:fontFamily="@font/bubblegum_sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/menuLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuLayout1">

        <Button
            android:id="@+id/menuPlayButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:background="?android:textColorSecondary"
            android:textColor="?android:colorBackground"
            android:onClick="playButtonOnClick"
            android:text="@string/playButtonText"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/menuLevelsButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_below="@+id/menuPlayButton"
            android:layout_marginTop="30dp"
            android:background="?android:textColorSecondary"
            android:textColor="?android:colorBackground"
            android:onClick="levelsButtonOnClick"
            android:text="@string/levelButtonText"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/menuSettingsButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_below="@+id/menuLevelsButton"
            android:layout_marginTop="30dp"
            android:background="?android:textColorSecondary"
            android:textColor="?android:colorBackground"
            android:onClick="settingsButtonOnClick"
            android:text="@string/settingsButtonText"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>