<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".PlayLevelActivity">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ic_menu"
                android:contentDescription="@string/levelsMenuButtonDescription"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:onClick="levelsButtonOnClick"
                app:backgroundTint="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ic_settings"
                android:contentDescription="@string/levelsSettingsButtonDescription"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:onClick="settingsButtonOnClick"
                app:backgroundTint="?android:textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/hintsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ic_hint"
                android:contentDescription="@string/levelsSettingsButtonDescription"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:onClick="hintsButtonOnClick"
                app:backgroundTint="?android:textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/levelNameTitle"
            android:layout_width="329dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/levelsTitle"
            android:textColor="?android:textColorPrimary"
            android:textSize="50sp"
            app:fontFamily="@font/fira_mono_bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/levelFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/levelSendLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></FrameLayout>

    <LinearLayout
        android:id="@+id/levelSendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="285dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/userInputHint"
            android:inputType="text"
            android:textSize="20sp"
            android:textColor="?android:textColorSecondary"
            android:textColorHint="?android:textColorTertiary"
            app:backgroundTint="?android:textColorTertiary"
            app:fontFamily="@font/fira_mono_bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:onClick="handleUserInput">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_send"
                app:backgroundTint="?android:textColorSecondary"
                android:contentDescription="@string/levelSendButtonDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:minHeight="30dp"
                android:background="@drawable/ic_right_arrow"
                app:backgroundTint="?android:colorBackground"
                android:contentDescription="@string/levelSendButtonDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>