<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context=".LevelsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/levelsLayout1"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/levelsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/levelsTitle"
            android:textColor="#1F1578"
            android:textSize="50sp"
            app:fontFamily="@font/bubblegum_sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/levelsMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_menu"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:contentDescription="@string/levelsMenuButtonDescription"
                android:onClick="menuButtonOnClick" />

            <ImageButton
                android:id="@+id/levelsSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_settings"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:contentDescription="@string/levelsSettingsButtonDescription"
                android:onClick="settingsButtonOnClick" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelsLayout1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/selectLevelUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_up"
                android:contentDescription="@string/levelsMenuButtonDescription"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:onClick="upButtonOnClick" />

            <TextView
                android:id="@+id/selectLevelNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#AAAAAA"
                android:textSize="70sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                app:fontFamily="@font/bubblegum_sans"/>

            <ImageButton
                android:id="@+id/selectLevelDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_down"
                android:contentDescription="@string/levelsMenuButtonDescription"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:onClick="downButtonOnClick" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/selectLevelPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/levelsPlayButtonDescription"
            android:minWidth="125dp"
            android:minHeight="125dp"
            android:onClick="playButtonOnClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>